--- a/Machine_Learning_Prevendo_Preço_Locação_Imóveis_em_São_Paulo.ipynb
+++ b/Machine_Learning_Prevendo_Preço_Locação_Imóveis_em_São_Paulo.ipynb
@@ -24,7 +24,7 @@
         "id": "irNiZuOzb8i2"
       },
       "source": [
-        "O mercado de locação em São Paulo é marcado por grande variação de preços, influenciado por fatores como localização, infraestrutura e perfil socioeconômico. Dados do Índice FipeZap (2024) mostram que bairros nobres, como Jardins e Vila Olímpia, ultrapassam R$ 45/m², enquanto regiões periféricas têm valores significativamente menores. A concentração de empregos, transporte e serviços nas áreas centrais eleva a demanda, enquanto imóveis com amenities (piscina, academia) e vagas de garagem atingem preços mais altos. Além disso, a pandemia e a retomada econômica trouxeram mudanças na dinâmica do mercado, aumentando a complexidade na precificação.\n",
+        "O mercado de locação em São Paulo é marcado por grande variação de preços, influenciado por fatores como localização, infraestrutura e perfil socioeconômico. Dados do Índice FipeZap (2024) mostram que bairros nobres, como Jardins e Vila Olímpia, ultrapassam R$ 45/m², enquanto regiões periféricas têm valores significativamente menores. A concentração de empregos, transporte e serviços nas áreas centrais eleva a demanda, enquanto imóveis com piscina, academia e vagas de garagem atingem preços mais altos. Além disso, a pandemia e a retomada econômica trouxeram mudanças na dinâmica do mercado, aumentando a complexidade na precificação.\n",
         "\n",
         "Diante desse cenário, entender os determinantes dos preços é essencial para inquilinos, proprietários e corretores, que buscam tomar decisões mais assertivas em um mercado competitivo e volátil."
       ]
