--- a/Machine_Learning_Prevendo_Preço_Locação_Imóveis_em_São_Paulo.ipynb
+++ b/Machine_Learning_Prevendo_Preço_Locação_Imóveis_em_São_Paulo.ipynb
@@ -91,7 +91,7 @@
         "id": "rJwlLtuEBA9g"
       },
       "source": [
-        "Ao longo do desenvolvimento deste projeto de previsão do preço de locação de imóveis na cidade de São Paulo, as bibliotecas e frameworks adotados foram escolhidos com base em critérios como ampla aceitação na comunidade científica, desempenho, facilidade de integração e robustez para análise e modelagem de dados reais complexos."
+        "Ao longo do desenvolvimento deste projeto de previsão do preço de locação de imóveis na cidade de São Paulo, as bibliotecas adotadas foram escolhidas com base em critérios como, desempenho, facilidade de integração e robustez para análise e modelagem de dados reais complexos."
       ]
     },
     {
