--- a/Machine_Learning_Prevendo_Preço_Locação_Imóveis_em_São_Paulo.ipynb
+++ b/Machine_Learning_Prevendo_Preço_Locação_Imóveis_em_São_Paulo.ipynb
@@ -3339,7 +3339,7 @@
         "id": "x1AVuN1_K4TV"
       },
       "source": [
-        "Para refinar a análise dos preços de locação, foi calculado o valor do metro quadrado para cada apartamento, dividindo-se o preço total pelo tamanho do imóvel em metros quadrados. Em seguida, foi feita a agregação desses valores para obter a média do metro quadrado em cada bairro, o que permitiu identificar variações regionais mais precisas e fornecer uma base sólida para o modelo prever preços considerando as características locais do mercado imobiliário."
+        "Para refinar a análise dos preços de locação, foi calculado o valor do metro quadrado para cada apartamento, dividindo-se o preço total pelo tamanho do imóvel em metros quadrados. Em seguida, foi feita a agregação desses valores para obter a média do metro quadrado em cada bairro, o que permitiu identificar variações regionais mais precisas e fornece uma base sólida para o modelo prever preços considerando as características locais do mercado imobiliário."
       ]
     },
     {
