--- a/Machine_Learning_Prevendo_Preço_Locação_Imóveis_em_São_Paulo.ipynb
+++ b/Machine_Learning_Prevendo_Preço_Locação_Imóveis_em_São_Paulo.ipynb
@@ -6425,7 +6425,7 @@
       "source": [
         "O gráfico de barras exibe o erro absoluto médio agrupado por faixas de valor real de aluguel, proporcionando uma análise clara da precisão dos diferentes modelos de machine learning testados. Essa visualização é essencial para identificar padrões sistemáticos nos erros de predição, permitindo avaliar o desempenho dos modelos em diferentes categorias de preços. Frequentemente, observa-se que imóveis com valores de aluguel mais altos tendem a apresentar erros de predição maiores, possivelmente devido a preços especulativos ou à menor quantidade de dados disponíveis para treinamento nessas faixas.\n",
         "\n",
-        "Para aprofundar essa análise, o gráfico pode ser complementado com uma tabela que detalhe o erro absoluto médio (MAE) e o erro percentual médio por faixa de preço, facilitando a comparação quantitativa entre os modelos. Além disso, incorporar uma análise de dispersão dos erros em relação aos valores reais pode revelar se os modelos subestimam ou superestimam consistentemente em certas faixas, como em imóveis de alto valor. Essa abordagem ajuda a identificar limitações específicas de cada modelo, como a tendência de uma Floresta Aleatória a capturar melhor variações em faixas intermediárias ou a dificuldade de uma Regressão Linear em lidar com outliers em preços elevados. Com isso, é possível direcionar ajustes, como a inclusão de mais features relevantes (e.g., localização ou características específicas do imóvel) ou o uso de técnicas de regularização para melhorar a generalização dos modelos em faixas de preço menos representadas no conjunto de dados."
+        "Além disso, incorporar uma análise de dispersão dos erros em relação aos valores reais pode revelar se os modelos subestimam ou superestimam consistentemente em certas faixas, como em imóveis de alto valor. Essa abordagem ajuda a identificar limitações específicas de cada modelo, como a tendência de uma Floresta Aleatória a capturar melhor variações em faixas intermediárias ou a dificuldade de uma Regressão Linear em lidar com outliers em preços elevados. Com isso, é possível direcionar ajustes, como a inclusão de mais features relevantes (localização ou características específicas do imóvel) ou o uso de técnicas de regularização para melhorar a generalização dos modelos em faixas de preço menos representadas no conjunto de dados."
       ]
     },
     {
@@ -6572,7 +6572,7 @@
         "\n",
         "- `Decision Tree`: no treino, o modelo praticamente memoriza os dados, com pontos muito próximos da linha ideal, **overfitting**. No teste, embora os pontos ainda se alinhem relativamente bem à linha x=y, há maior dispersão em valores mais altos, revelando dificuldades de generalização.\n",
         "\n",
-        "- `Random Forest`: se destaca por uma aderência muito boa à linha ideal em ambos os conjunto, treino e teste. Os pontos ficam bem distribuídos ao longo da linha x=y, demonstrando que o modelo consegue fazer predições mais consistentes e robustas, inclusive para imóveis de maior valor."
+        "- `Random Forest`: se destaca por uma aderência muito boa à linha ideal em ambos os conjuntos, treino e teste. Os pontos ficam bem distribuídos ao longo da linha x=y, demonstrando que o modelo consegue fazer predições mais consistentes e robustas, inclusive para imóveis de maior valor."
       ]
     },
     {
